--- a/src/App.css
+++ b/src/App.css
@@ -4,38 +4,23 @@
   padding: 2rem;
   text-align: center;
 }
+#page {
+  background: #f6f6f6;
+  display: block;
+  height: 100%;
+  width: 100%;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+#dot {
+  width: 10px;
+  height: 10px;
+  display: block;
+  background-color: red;
+  position: absolute;
+  top: 100px;
+  left: 100px;
 }
